style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');

body {
    font-family: 'Roboto', Arial, Helvetica, sans-serif;
    display: grid;
    grid-template-columns: 1fr 4fr;
}

ul {
    list-style: none;
}

#sidebar {
    color: white;
    font-weight: 500;
    font-size: 18px;
    background-color: rgb(60, 157, 236);
    padding: 20px;
}

#content {
    grid-column: 2;
    display: grid;
    grid-template-rows: 1fr 5fr;
    background-color: rgb(235, 239, 255);
}

#header {
    background-color: white;
    grid-row: 1;
    display: grid;
    grid-template-rows: repeat(2, 1fr);
    padding-right: 20px;
}

#projects {
    background-color: rgb(235, 239, 255);
    grid-row: 2;
}

#header-row-1 {
    grid-row: 1;
    display: grid;
    grid-template-columns: 2fr 1fr;
    align-items: center;
}

#search-container {
    display: grid;
    grid-template-columns: 1fr 7fr;
    grid-column: 1;
    align-items: center;
}

#user-container {
    display: grid;
    grid-template-columns: 1fr 1fr 3fr;
    grid-column: 2;
    align-items: center;
    justify-self: self-end;
    gap: 15px;
}


#search-icon {
    grid-column: 1;
    width: 25px;
    justify-self: center;
}

input {
    grid-column: 2;
    display: block;
    height: 25px;
    justify-self: self-start;
    width: 90%;
    border-radius: 20px;
    border: none;
    background-color: rgb(235, 239, 255);
}

#notifications-icon {
    width: 25px;
    justify-self: center;
    grid-column: 1;
}

#user-avatar-small {
    grid-column: 2;
    width: 45px;
    justify-self: self-end;
}

#username-small {
    grid-column: 3;
}

#header-row-2 {
    grid-row: 2;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    align-items: center;
    padding-left: 20px;
}

#user-welcome {
    grid-column: 1;
    display: grid;
    grid-template-columns: 1fr, 2fr;
    align-items: center;
    justify-self: self-start;
    gap: 20px;
    padding-left: 20px;
}

#action-buttons {
    grid-column: 2;
    justify-self: self-end;
}

button {
    border: none;
    background-color: rgb(60, 157, 236);
    color: white;
    font-size: 15px;
    font-weight: 500;
    padding: 10px 0;
    width: 100px;
    margin: 5px 8px;
    border-radius: 20px;
}

#user-avatar-large {
    width: 70px;
    grid-column: 1;
    justify-self: center;
}

#hi-username {
    grid-column: 2;
    justify-self: self-start;
}

#username-large {
    margin-top: -12px;
}


#dashboard-logo {
    display: grid;
    grid-template-columns: 1fr 5fr;
    align-items: center;
}

#dashboard-icon {
    width: 40px;
}

#dashboard-heading {
    font-size: 30px;
    justify-self: self-start;
}

#main-container {
    display: grid;
    grid-template-columns: 3fr 1fr;
    padding: 25px;
}

#projects-container {
    grid-column: 1;
    display: grid;
    grid-template-rows: 1fr 8fr;
}

#main-column-2 {
    grid-column: 2;
    display: grid;
    grid-template-rows: repeat(2, 1fr);
}

#announcements-container {
    grid-column: 2;
}

#trending-container {
    grid-column: 2;
}

.project-card {
    background-color: white;
    height: 200px;
    border-radius: 8px;
}

.section-heading {
    grid-row: 1;
}

#cards-container {
    grid-row: 2;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    gap: 10px;
}

#sidebar li {
    margin: 12px 0;
}

#sidebar ul {
    margin-bottom: 50px;
}

